--- a/Interface/demo/show_mri/static/show_mri/styles.css
+++ b/Interface/demo/show_mri/static/show_mri/styles.css
@@ -1,3 +1,51 @@
+html{
+	background-color: rgba(3,164,162,0.2);
+}
+
+nav{
+	background-image: url("navbg_o.jpeg");
+	/* https://www.datamation.com/artificial-intelligence/artificial-intelligence-vs-machine-learning-2/ */
+	min-height: 150px;
+
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	padding-bottom: 20px;
+	text-align: center;
+}
+.nav_link{
+	border-bottom: 1px solid rgba(255,255,255,.3);
+}
+.nav h1{
+	font-size: 2em;
+}
+
+.nav ul{
+	margin: 0;
+}
+.nav li{
+	display: inline;
+}
+.nav a{
+	display: inline-block;
+	padding: .5em;
+	color: white;
+	text-decoration: none;
+}
+.nav a:hover{
+	background-color: rgba(200,200,200);
+}
+
+.nav #author_list{
+	color: rgba(242, 253, 170, 1);
+	font-size: 1.3em;
+
+}
+.nav #title{
+	color: rgba(242, 253, 170, 1);
+	/*font-weight: normal;*/
+}
 .testborder {
 	border-color: red;
 	border-width: thin;
@@ -21,7 +69,7 @@ div .column {
 
 .side{
 	flex: 10%;
-	background-color: green;
+	background-color: lightgrey;
 }
 
 
