--- a/Interface/demo/show_mri/templates/show_mri/index.html
+++ b/Interface/demo/show_mri/templates/show_mri/index.html
@@ -2,22 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> My test page</title>
+        <title> EC601 Project</title>
         {% load static %}
 
         <link rel="stylesheet" type="text/css" href="{% static 'show_mri/styles.css' %}"/>
     </head>
     <body>
     <header>
-        <nav>
-
-            <ul>
-                <li>ABOUT</li>
-            </ul>
-            <hr>
-            <h1>
-                EC601 Group 5
+        <nav class="nav">
+            <div class="nav_link">
+                <ul>
+                    <li><a href="" >ABOUT</a></li>
+                    <li><a href="">HOME</a></li>
+                </ul>
+            </div>
+            <h1 id="title">
+                EC601 Group 5: Brain Tumor Radiogenomic Classification 
             </h1>
+            <div id="author_list">
+                <u1>
+                    <li>Yunjie Huang,</li>
+                    <li>Lu Yao,</li>
+                    <li>Tan, Tian,</li>
+                    <li>Rueiyang Huang</li>
+                </u1>
+            </div>
         </nav>
     </header>
     <section>
