--- a/Interface/demo/show_mri/templates/show_mri/index.html
+++ b/Interface/demo/show_mri/templates/show_mri/index.html
@@ -33,7 +33,8 @@
         <div class="row">
             {% load static %}
             <div class="side">
-                <form action="#"> 
+                <form action="#" method="POST"> 
+                    {% csrf_token %}
                     <h3 id="side-title">
                         Image Sample Selection  
                     </h3>
@@ -44,7 +45,7 @@
                           <select id="pid" name="patient-id">
 
                             {% for pn in patient_list %}
-                            <option value="{{ pn }}">{{ pn }}</option>
+                            <option value="{{ pn }}" {% if pn == PID %} selected {% endif %} >{{ pn }}</option>
                             {% endfor %}
 
 
@@ -54,7 +55,7 @@
                   
                   </div>
                   <div class="select-container">
-                     <label class="rlabel">MGMT Score = {{MGMT_score}}</label>
+                     <label class="rlabel">MGMT Score = <span style="color:red;">{{MGMT_score}} </span></label>
                   </div>
                   <div>
                   <label class="rlabel">
@@ -64,11 +65,11 @@
                   <div class="radio-container">
 
                     <label class="radio">
-                        <input type="radio" name="Sampling" value="m32">
+                        <input type="radio" name="Sampling" value="m32" {% if STA == "m32" %} checked {% endif %}>
                         <span>Centered</span>
                     </label> 
                     <label class="radio">
-                        <input type="radio" name="Sampling" text="d32" checked>
+                        <input type="radio" name="Sampling" value="d32" {% if STA == "d32" %} checked {% endif %}>
                         <span>Equally Distributed</span>
                     </label> 
                   </div>
@@ -78,19 +79,19 @@
                   <div class="radio-container">
 
                     <label class="radio">
-                        <input type="radio" name="MRI-type" value="FLAIR" checked>
+                        <input type="radio" name="MRI-type" value="FLAIR" {{radio_flair_checked}}>
                         <span>FLAIR</span>
                     </label> 
                     <label class="radio">
-                        <input type="radio" name="MRI-type" text="T1">
-                        <span>T1</span>
+                        <input type="radio" name="MRI-type" value="T1w" {{radio_t1w_checked}}>
+                        <span>T1w</span>
                     </label> 
                     <label class="radio">
-                        <input type="radio" name="MRI-type" text=T2>
-                        <span>T2</span>
+                        <input type="radio" name="MRI-type" value="T2w" {{radio_t2w_checked}}>
+                        <span>T2w</span>
                     </label> 
                     <label class="radio">
-                        <input type="radio" name="MRI-type" text="T1w">
+                        <input type="radio" name="MRI-type" value="T1wCE"{{radio_t1wce_checked}}>
                         <span>T1wCE</span>
                     </label> 
 
