--- a/Interface/demo/show_mri/templates/show_mri/index.html
+++ b/Interface/demo/show_mri/templates/show_mri/index.html
@@ -12,8 +12,8 @@
         <nav class="nav">
             <div class="nav_link">
                 <ul>
-                    <li><a href="" >ABOUT</a></li>
-                    <li><a href="">HOME</a></li>
+                    <li><a href="/show_mri/about.html" >ABOUT</a></li>
+                    <li><a href="/show_mri" >HOME</a></li>
                 </ul>
             </div>
             <h1 id="title">
