--- a/Interface/demo/show_mri/static/show_mri/styles.css
+++ b/Interface/demo/show_mri/static/show_mri/styles.css
@@ -14,6 +14,8 @@ nav{
 	padding-bottom: 20px;
 	text-align: center;
 }
+
+
 .nav_link{
 	border-bottom: 1px solid rgba(255,255,255,.3);
 }
@@ -50,6 +52,7 @@ nav{
 	border-color: red;
 	border-width: thin;
 }
+
 
 
 .row {
@@ -307,4 +310,15 @@ hr{
 	margin: 10px;
 	padding: 10px 0px 20px 0px;
 	border: 1px solid black;
+}
+
+
+.posterbox {
+  display: grid;
+  height: 100%;
+}
+.poster {
+  width: 60%;
+  height: auto;
+  
 }
